<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">BeeTV-Beta</string>
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">Todo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your task here.</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="successfully_saved_task_message">Task saved</string>
    <string name="list_title">Task List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks: %.1f%%</string>
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All Tasks</string>
    <string name="label_active">Active Tasks</string>
    <string name="label_completed">Completed Tasks</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_task_message">Task was deleted</string>
    <string name="successfully_added_task_message">Task added</string>
    <string name="no_data_description" />

    <!-- Content Descriptions -->
    <string name="tasks_header_image_content_description">Tasks header image</string>
    <string name="no_tasks_image_content_description">No tasks image</string>


    <string name="realtime_broadcasting">실시간방송</string>
    <string name="movie">영화</string>
    <string name="drama">드라마</string>
    <string name="entertainment">예능</string>
    <string name="preview_education">시사교양</string>
    <string name="child">어린이</string>
    <string name="search">검색</string>
    <string name="favorites">즐겨찾기</string>
    <string name="playback_record">재생기록</string>
    <string name="setting">설정</string>
    <string name="name">이름</string>
    <string name="director">감독</string>
    <string name="actor">주연배우</string>
    <string name="type">유형</string>
    <string name="area">지역</string>
    <string name="year">년도</string>
    <string name="summary">줄거리</string>
    <string name="play">재생</string>
    <string name="a_en">a</string>
    <string name="b_en">b</string>
    <string name="c_en">c</string>
    <string name="d_en">d</string>
    <string name="e_en">e</string>
    <string name="f_en">f</string>
    <string name="g_en">g</string>
    <string name="h_en">h</string>
    <string name="i_en">i</string>
    <string name="j_en">j</string>
    <string name="k_en">k</string>
    <string name="l_en">l</string>
    <string name="m_en">m</string>
    <string name="n_en">n</string>
    <string name="o_en">o</string>
    <string name="p_en">p</string>
    <string name="q_en">q</string>
    <string name="r_en">r</string>
    <string name="s_en">s</string>
    <string name="t_en">t</string>
    <string name="u_en">u</string>
    <string name="v_en">v</string>
    <string name="w_en">w</string>
    <string name="x_en">x</string>
    <string name="y_en">y</string>
    <string name="z_en">z</string>


    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="empty">비우기</string>
    <string name="delete">삭제</string>
    <string name="korean">한국어</string>
    <string name="english">English</string>
    <string name="search_result">검색결과</string>
    <string name="confirm">확인</string>
    <string name="a_ko">ㄱ</string>
    <string name="b_ko">ㄲ</string>
    <string name="c_ko">ㄴ</string>
    <string name="d_ko">ㄷ</string>
    <string name="e_ko">ㄸ</string>
    <string name="f_ko">ㄹ</string>
    <string name="g_ko">ㅁ</string>
    <string name="h_ko">ㅂ</string>
    <string name="i_ko">ㅃ</string>
    <string name="j_ko">ㅅ</string>
    <string name="k_ko">ㅆ</string>
    <string name="l_ko">ㅇ</string>
    <string name="m_ko">ㅈ</string>
    <string name="n_ko">ㅉ</string>
    <string name="o_ko">ㅊ</string>
    <string name="p_ko">ㅋ</string>
    <string name="q_ko">ㅌ</string>
    <string name="r_ko">ㅍ</string>
    <string name="s_ko">ㅎ</string>
    <string name="t_ko">1</string>
    <string name="u_ko">2</string>
    <string name="v_ko">3</string>
    <string name="w_ko">4</string>
    <string name="x_ko">5</string>
    <string name="y_ko">6</string>
    <string name="z_ko">7</string>
    <string name="three_ko">0</string>
    <string name="two_ko">9</string>
    <string name="one_ko">8</string>
    <string name="all">전체</string>
    <string name="aspect_ratio">화면비율</string>
    <string name="player">플레이어</string>
    <string name="language">언어</string>
    <string name="slot">시간대</string>
    <string name="id">아이디</string>
    <string name="service_life">서비스 기간</string>
    <string name="authority">권한</string>
    <string name="logout">로그아웃</string>
    <string name="would_you_like_to_log_out">로그아웃 하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="password">비밀번호</string>
    <string name="go_back">뒤로가기</string>
    <string name="register_successfully">가입완료 되었습니다.</string>
    <string name="login_successfully">로드인 되었습니다.</string>
    <string name="english_ko">영문</string>
</resources>
